--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^5.8.1"
   },
   "module": "src/index.js"
 }
