Basic prisma setup

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "prisma:migrate": "bunx prisma migrate dev"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "elysia": "latest"
   },
   "devDependencies": {
